# rust-embedded-templates

stm32f401-black-pill/blinky/: Cargo.toml  LICENSE  README.md  memory.x
stm32f401-black-pill/blinky/src/: main.rs
