[package]
name = "blinky"
version = "0.1.0"
authors = ["Tim Docker"]
edition = "2018"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = { version = "0.7.1", features = ["device"] }
panic-rtt-target = {version = "0.1.1", features = ["cortex-m"]}
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
stm32f4xx-hal = { version = "0.12.0", features = ["rt", "stm32f401"] }
embedded-hal = "0.2.6"
nb = "1.0.0"

